chore: update links for repository renames

--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -12,7 +12,7 @@ jobs:
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
-    if: ${{ github.repository_owner == 'nrkno' }}
+    if: ${{ github.repository_owner == 'Sofie-Automation' }}
 
     steps:
       - uses: actions/checkout@v4
